--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-  json_annotation: ^4.9.0
   http: ^1.2.1
+  json_annotation: ^4.9.0
   random_name_generator: ^1.3.0
   english_words: ^4.0.0
   provider: ^6.0.0
+  geolocator: ^12.0.0
 
 dev_dependencies:
   flutter_test:
