--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
         android:label="dating_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <uses-permission
+            android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
