--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,17 @@ dependencies:
 
   http: ^1.2.1
   json_annotation: ^4.9.0
+  json_serializable: ^6.8.0
   random_name_generator: ^1.3.0
   english_words: ^4.0.0
   provider: ^6.0.0
   geolocator: ^12.0.0
+  firebase_core: ^3.2.0
+  firebase_database: ^11.0.3
+  uuid: ^4.4.2
+  google_maps_flutter: ^2.7.0
+  flutter_map_math: ^0.1.7
+  latlong2: ^0.9.1
 
 dev_dependencies:
   flutter_test:
@@ -24,7 +31,12 @@ dev_dependencies:
 
   flutter_lints: ^4.0.0
   build_runner: ^2.4.11
-  json_serializable: ^6.8.0
+  network_image_mock: ^2.0.1
+  mockito: ^5.4.4
 
 flutter:
   uses-material-design: true
+  assets:
+    - lib/google_maps/assets/style/map/classic_dark.json
+    - lib/google_maps/assets/style/map/black_pink.json
+    - lib/google_maps/assets/style/map/silver_pink.json
